test_regress/t/t_sampled_sensitivity.out
%Error-UNSUPPORTED: t/t_sampled_sensitivity.v:11:20: Unsupported: $sampled inside sensitivity list
                                                   : ... note: In instance 't'
   11 |   always @(posedge $sampled(clk)) begin
      |                    ^~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
